# dawdle_live

./: .gitignore  CMakeLists.txt  res.qrc
res/: resources.qrc
src/: application.cpp  application.hpp  main.cpp
src/application/: application.cpp  application.hpp
src/component/: tray_icon.cpp  tray_icon.hpp
src/tray_icon/: base_action.cpp  base_action.hpp  base_tray_action.cpp  base_tray_action.hpp  exit_action.cpp  exit_action.hpp  exit_tray_action.cpp  exit_tray_action.hpp  menu_manager.cpp  menu_manager.hpp  setting_action.cpp  setting_action.hpp  tray_icon_manager.cpp  tray_icon_manager.hpp
ui/: Main.qml
